Typo in notebook fixed

--- a/FRELSA_run.ipynb
+++ b/FRELSA_run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d13bab0c",
+   "id": "37e3998f",
    "metadata": {},
    "source": [
     "# Notebook for the creation of the FRELSA dataframe"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91cd3c2e",
+   "id": "ecbfa589",
    "metadata": {},
    "source": [
     "Department of Telematic Engineering Systems, Universidad Politécnica de Madrid, © Matteo Leghissa"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e55391",
+   "id": "6efc377a",
    "metadata": {},
    "source": [
     "To properly run this notebook one should have the data from wave 5 and wave 6 of the ELSA (Englidh Longitudinal Study of Ageing) study [https://www.elsa-project.ac.uk/].\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "16463e70",
+   "id": "fa4ab021",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "228a227f",
+   "id": "d0c870a1",
    "metadata": {},
    "source": [
     "## Computation of the Fried Frailty Phenotype"
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "634bda00",
+   "id": "6ba86a79",
    "metadata": {},
    "source": [
     "Let us open wave 6 data (both core data and nurse visit data), and merge them in a single dataframe.\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68debc1f",
+   "id": "2000a4e3",
    "metadata": {},
    "source": [
     "![FFPtable](img/FFP-table.png)"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "114dd400",
+   "id": "4728e569",
    "metadata": {},
    "source": [
     "We then save the dataframe with the new frailty variable added, to avoid repeating this step in the future."
@@ -92,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c92792e6",
+   "id": "f92cb7d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16454101",
+   "id": "b4ff12f6",
    "metadata": {},
    "source": [
     "## Features selection"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed1a9f8e",
+   "id": "2864e552",
    "metadata": {},
    "source": [
     "We can now load the wave 6 data we just saved, with its frailty label.\n",
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7b8ef7e",
+   "id": "19b02965",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +142,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acd3b9ba",
+   "id": "6a2d6599",
    "metadata": {},
    "source": [
-    "We then preprocess both wave 5 and 6 data to scale the values and perform feature selection using the MULTISurf logic."
+    "We then preprocess both wave 5 and 6 data to scale the values and perform feature selection using the MultiSURF logic."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9209512e",
+   "id": "97dd0ce3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b17e1c7",
+   "id": "6803f2ea",
    "metadata": {},
    "source": [
     "This process might be costly and take a long time, especially if we do not have many CPUs or GPUs available.\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "459cf296",
+   "id": "5df0fbe0",
    "metadata": {},
    "source": [
     "## Models training"
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a95c3ba",
+   "id": "dbf58594",
    "metadata": {},
    "source": [
     "Let us define in a dictionary the different classifiers we want to train, with all the hyperparameters we want to try out."
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e03c161",
+   "id": "d853b8d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed886e89",
+   "id": "72d35530",
    "metadata": {},
    "source": [
     "### Detection models (wave 6)"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d40c98b2",
+   "id": "79ac7872",
    "metadata": {},
    "source": [
     "Now we can read the file we just saved with the best features, train the models specified in the dictionary above, including possibly a Voting Classifier.\n",
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c604f8a",
+   "id": "bd952a0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a0f0da",
+   "id": "34cbd56a",
    "metadata": {},
    "source": [
     "And now let us check the results:"
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "70e7292c",
+   "id": "d8a10336",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0d62105",
+   "id": "b62b4355",
    "metadata": {},
    "source": [
     "### Prediction models (wave 5)"
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea863d34",
+   "id": "b475ed40",
    "metadata": {},
    "source": [
     "Repeat the same process for wave 5.\n",
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df391ee7",
+   "id": "1ccbd3cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "153cb1e4",
+   "id": "855caa34",
    "metadata": {},
    "source": [
     "Let us check the results that we just saved."
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a8c4837b",
+   "id": "049a6909",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ad1a1cd",
+   "id": "b7c99083",
    "metadata": {},
    "outputs": [],
    "source": []
